--- a/src/assets/colour-tokens.css
+++ b/src/assets/colour-tokens.css
@@ -66,7 +66,7 @@
   margin: 0;
   background-repeat: no-repeat;
   box-sizing: border-box;
-  font-family: Arial, Verdana, sans serif;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-size: 12px;
 }
 
